2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/ppp_up.c: Change the prototype of pr_func to match 
	diag_printf().
	* src/ppp_io.c (ppplogchar): Added missing parameter to diag_printf().

2005-01-16  Matt Jerdonek <maj1224@yahoo.com>
            Andrew Lunn  <andrew.lunn@ascom.ch>
	
	* cdl/ppp.cdl 
	* src/ppp_io.c (pppasyncstart): Conditionally allow the PPP daemon
	to send a start flag at the beginning of very packet. This is not
	required according to RFC 1662, but found to be necessary to
	interwork with some broken implementations.

2004-12-01    Murali Parvathaneni <murkrisp@yahoo.com>

	* include/ppp.h: Add options to negotiate ACCM in
	cyg_ppp_options_t structure.
	* include/pppd.h: Make ACCM negotiation fields externally
	available.
	* include/names.h: Redefine neg_accm and conf_accm with cyg_ppp_
	prefix.
	* src/pppd.c: Define storage for ACCM and a flag for ACCM
	negotiation.
	* src/sys-ecos.c: Initialize and set parameters to negotiate ACCM
	based on the configuration option.
	* src/lcp.c: Set WantOptions (wo) to negotiate ACCM.
	
2004-08-19  Oyvind Harboe <oyvind.harboe@zylin.com>
2004-09-08  Andrew Lunn <andrew.lunn@ascom.ch>
	
	* windows_telnet.c: now demonstrates chat script TIMEOUT, which
	makes connection more snappy. It also repeatably attempts at
	connect until a connection is established instead of a single try.
	Once a telnet session is aborted, a new one can be established.
	Also cleaned up the indentation to make it more readable.

2004-06-29	Matt Jerdonek <maj1224@yahoo.com>

	* cdl/ppp.cdl:
	* src/ipcp.c:
		Add option to disallow negotiation of old-style VJ compression
	* include/ppp.h:
		Add structure to track ppp failure reasons
	* include/pppd.h:
		Fix compiler warning
	* src/auth.c:
	* src/lcp.c:
	* src/pppd.c:
		Add code to track ppp failure reasons
	* src/chat.c:
		Fixes to clear out buffer space to allow chat script to run 
		multiple times.  Note: function is still not thread-safe
	* src/sys-ecos.c: